# mobile_de

./: .gitignore  README.md  main.py  pyproject.toml
external_lib/: euro_rate.py  test_euro_rate.py
mobile_de/: __init__.py  automobile.py  mobile_de.py
src/: automobile.py  mobile_de.py  script.py
tests/: test_automobile.py  test_euro_rate.py  test_mobile_de.py
